Vertical menu icons support. Use local FontAwesome instead of CDN to avoid flickering and 3rd party dependency

--- a/suit/sass/layout/_navbars.scss
+++ b/suit/sass/layout/_navbars.scss
@@ -156,10 +156,12 @@ body.suit_layout_vertical {
           }
         }
         > a {
-          //transition: background-color .1s, color .1s;
           display: block;
           padding: .6rem $header-padding-horizontal/1.5;
           color: transparentize(#fff, .3);
+          .fa {
+            margin-right: .7rem;
+          }
         }
         &:not(.active) {
           a {
